# partisiablockchain

./: .coverage-allowlist.txt  .gitignore  .gitlab-ci.yml  Cargo.toml  LICENSE.txt  README.md
create_type_spec_derive/: Cargo.toml
create_type_spec_derive/src/: lib.rs
pbc_contract_codegen/: Cargo.toml  README.md
pbc_contract_codegen/src/: action_macro.rs  callback_macro.rs  init_macro.rs  lib.rs  macro_abi.rs  state_macro.rs  tokenized.rs  version.rs  zk_macro.rs
pbc_contract_codegen/tests/: contract_function_behaviour.rs  init_behaviour_zero.rs
pbc_contract_codegen/tests/action/fail/: bad_arg_pattern_literal.stderr  bad_arg_pattern_wildcard.rs  bad_arg_pattern_wildcard.stderr  empty_action.stderr  invalid_action_attribute.stderr  shortname_bad_negative.stderr  shortname_bad_negative_hex.rs  shortname_bad_negative_hex.stderr  shortname_bad_not_hex.rs  shortname_bad_not_hex.stderr  shortname_bad_not_leb128.stderr  shortname_bad_too_damned_long.stderr  shortname_bad_too_long.rs  shortname_bad_too_long.stderr  single_argument.rs  single_argument.stderr  two_arguments_not_correct_types.rs  two_arguments_not_correct_types.stderr
pbc_contract_codegen/tests/action/success/: basic_contract.rs  callback_api.rs
pbc_contract_codegen_internal/: Cargo.toml  README.md
pbc_contract_codegen_internal/src/: action_macro.rs  callback_macro.rs  init_macro.rs  lib.rs  state_macro.rs  tokenized.rs  version.rs  zk_compute_macro.rs  zk_macro.rs
pbc_contract_common/: .gitignore  Cargo.toml
pbc_contract_common/src/: address.rs  address_internal.rs  context.rs  events.rs  function_name.rs  lib.rs  result_buffer.rs  signature.rs  test_examples.rs  testing_rng.rs
pbc_contract_common/src/abi/: func.rs  generate.rs
pbc_contract_common/src/avl_tree_map/: mod.rs  tree.rs
pbc_contract_common/src/sorted_vec_map/: entry.rs  map.rs  mod.rs  set.rs  vec.rs
pbc_contract_common/src/zk/: evm_event.rs  mod.rs
pbc_contract_common/tests/: abi_serialize.rs  address_test.rs  avl_tree_map.rs  context_tests.rs  create_type_name_avl_tree.rs  event_builder_tests.rs  serialize_canaries.rs  sorted_vec.rs  sorted_vec_map.rs  sorted_vec_set.rs  write_result.rs  zk_state_changes_tests.rs
pbc_contract_common/unit_tests/: event_serialization.rs
pbc_contract_core/: Cargo.toml
pbc_contract_core/src/: function_name.rs  leb128.rs  lib.rs  shortname.rs
pbc_contract_core/src/abi/: contract.rs  enum_variant.rs  func.rs  generate.rs  mod.rs  named_entity.rs  types.rs
pbc_lib/: Cargo.toml
pbc_lib/src/: lib.rs  wasm_avl_tree.rs
pbc_zk/: Cargo.toml
pbc_zk/src/: lib.rs  sbi.rs  sbi1.rs  sbi32.rs
pbc_zk/tests/: bad_computation.rs  example_computation.rs  sbi.proptest-regressions  sbi.rs  use_api.rs
pbc_zk_macros/: Cargo.toml  README.md
pbc_zk_macros/src/: lib.rs  secret_binary_derive.rs  test_eq.rs
sdk_tests/: Cargo.toml
sdk_tests/src/: lib.rs  test_contract_behaviour.rs
sdk_tests/tests/: contract_function_behaviour.rs  contract_function_behaviour_zk.rs  create_type_names.rs  create_type_spec_derive_tests.rs  pbc_zk_macro_test.rs  pbc_zk_test.rs  read_write_state_test.rs  rpc_code_generation.rs  rw_rpc_test.rs  secret_binary_test.rs  serialize_canaries_test.rs  shortname_test.rs  state_code_generation.rs  state_code_generation_zk.rs  trybuild.rs
sdk_tests/tests/create-type-spec-macro-fail/: missing_variant_discriminant.rs  missing_variant_discriminant.stderr  only_structs_with_named_fields_allowed.rs  only_structs_with_named_fields_allowed.stderr  only_support_enum_and_struct.rs  only_support_enum_and_struct.stderr  struct_enum_duplicate_discriminant.rs  struct_enum_duplicate_discriminant.stderr  tuple_style_enum.rs  tuple_style_enum.stderr
sdk_tests/tests/pbc_contract_codegen/compile_but_fail_abi/: zk_happy_input_struct_with_array_of_ints.rs  zk_happy_input_struct_with_array_of_ints.stderr  zk_happy_input_struct_with_byte_array.rs  zk_happy_input_struct_with_byte_array.stderr
sdk_tests/tests/pbc_contract_codegen/fail/: bad_arg_pattern_literal.rs  bad_arg_pattern_literal.stderr  bad_arg_pattern_wildcard.stderr  empty_action.rs  empty_action.stderr  invalid_action_attribute.rs  invalid_action_attribute.stderr  shortname_bad_negative.rs  shortname_bad_negative.stderr  shortname_bad_negative_hex.stderr  shortname_bad_not_hex.stderr  shortname_bad_not_leb128.rs  shortname_bad_not_leb128.stderr  (+9 more)
sdk_tests/tests/read-write-macro-fail/: array_length_must_be_literal.rs  array_length_must_be_literal.stderr  field_missing_trait.rs  field_missing_trait.stderr  generic_state_name_collide_const_generic.stderr  generic_state_name_collide_lifetime.stderr  generic_state_name_collide_type.stderr  read_write_only_support_enum_and_struct.rs  read_write_only_support_enum_and_struct.stderr  state_enum_duplicate_discriminants.stderr  state_enum_missing_a_single_discriminant.rs  state_enum_missing_a_single_discriminant.stderr  state_enum_missing_discriminants.rs  state_enum_missing_discriminants.stderr  state_enum_unsupported_with_data.rs  state_enum_unsupported_with_data.stderr  state_only_structs_with_named_fields_allowed.rs  state_only_structs_with_named_fields_allowed.stderr  state_struct_enum_missing_discriminant.rs  state_struct_enum_missing_discriminant.stderr  state_struct_enum_no_parens_discriminant.rs  state_struct_enum_no_parens_discriminant.stderr  state_struct_enum_non_literal_discriminant.rs  state_struct_enum_non_literal_discriminant.stderr  struct_enum_duplicate_discriminant.rs  struct_enum_duplicate_discriminant.stderr  tuple_style_enum_not_supported.rs  tuple_style_enum_not_supported.stderr
sdk_tests/tests/state-macro-fail/: generic_state_name_collide_const_generic.rs  generic_state_name_collide_const_generic.stderr  generic_state_name_collide_lifetime.rs  generic_state_name_collide_lifetime.stderr  generic_state_name_collide_type.rs  generic_state_name_collide_type.stderr  state_enum_duplicate_discriminants.rs  state_enum_duplicate_discriminants.stderr  state_enum_missing_a_single_discriminant.stderr  state_enum_missing_discriminants.stderr  state_enum_unsupported_with_data.stderr
(+130 files in other folders)
