[package]
name = "create_type_spec_derive"
version = "16.18.0"
edition = "2021"
license = "MIT"

[features]
abi = []

[lib]
proc-macro = true

[dependencies]
derive_commons = { path = "../derive_commons" }

syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
uuid = { version = "0.8", features = ["v4"] }
