[package]
name = "create_type_spec_derive"
version = "16.40.0"
edition = "2021"
license = "MIT"

[features]
abi = []

[lib]
proc-macro = true

[dependencies]
derive_commons = { path = "../derive_commons" }

syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
uuid = { version = "1.6.1", features = ["v4"] }
