[package]
name = "pbc_contract_codegen"
version = "16.32.0"
edition = "2021"
resolver = "1"
license = "MIT"

[features]
abi = ["pbc_contract_common/abi", "pbc_traits/abi", "pbc_lib/abi"]

[lib]
proc-macro = true

[dependencies]
syn = { workspace = true, features = ["full"] }
quote = { workspace = true }
proc-macro2 = { workspace = true }

pbc_contract_common = { path = "../pbc_contract_common" }
pbc_contract_codegen_internal = { path = "../pbc_contract_codegen_internal" }
pbc_traits = {path = "../pbc_traits"}
pbc_lib = { path = "../pbc_lib"}
create_type_spec_derive = { path = "../create_type_spec_derive" }
