[package]
name = "pbc_lib"
version = "16.40.0"
edition = "2021"
license = "MIT"

[features]
abi = ["dep:once_cell"]

[lib]

[dependencies]
pbc_traits = { path = "../pbc_traits" }
once_cell = { version = "1.18.0", optional = true }

[target.'cfg(not(any(target_arch = "wasm32", doc)))'.dependencies]
once_cell = "1.18.0"
