[package]
name = "pbc_zk"
version = "16.32.0"
edition = "2021"
license = "MIT"

[features]
abi = ["pbc_zk_core/abi", "pbc_zk_macros/abi", "pbc_contract_common/abi", "pbc_traits/abi"]

[dependencies]
once_cell = "1.18.0"

pbc_zk_core = { path = "../pbc_zk_core" }
pbc_zk_macros = { path = "../pbc_zk_macros" }
pbc_contract_common = { path = "../pbc_contract_common" }
pbc_traits = { path = "../pbc_traits" }

[dev-dependencies]
proptest = "1.4.0"
