[package]
name = "pbc_zk_macros"
version = "16.18.0"
edition = "2021"
license = "MIT"

[lib]
proc-macro = true

[features]
abi = ["pbc_contract_codegen_internal/abi"]

[dependencies]
syn = { workspace = true, features = ["full"] }
quote = { workspace = true }
proc-macro2 = { workspace = true }

derive_commons = { path = "../derive_commons" }
pbc_contract_codegen_internal = { path = "../pbc_contract_codegen_internal" }
